--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Cat Space</title>
+		<title>Gallery</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -14,13 +14,13 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="landing">
+	<body>
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
+					<header id="header">
 						<h1><a href="index.html">Cat Space</a></h1>
 						<nav id="nav">
 							<ul>
@@ -39,22 +39,18 @@
 						</nav>
 					</header>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Cat Space</h2>
-							<p>The internet does not <br />
-							have enough of<br />
-							CATS yet.</p>
-							<ul class="actions">
-								<li><a href="gallery.html" class="button special">Gallery</a></li>
-							</ul>
-						</div>
-						<a href="#one" class="more scrolly">Who made this</a>
-					</section>
+				<!-- Main -->
+					<article id="main">
+						<header>
+							<h2>Gallery</h2>
+							<p>Pictures you can't get enough of</p>
+						</header>
+						<section class="wrapper style5">
+							<div class="inner">
 
-				
-				
+							</div>
+						</section>
+					</article>
 
 				<!-- Footer -->
 					<footer id="footer">
