changed banner cat image

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Cat Space</h2>
-							<p>The internet does not <br />
-							have enough of<br />
-							CATS yet.</p>
+							<p>Because the internet does not <br />
+							have enough of cats<br />
+							yet...</p>
 							<ul class="actions">
 								<li><a href="gallery.html" class="button special">Gallery</a></li>
 							</ul>
