Gallery created and made responsive

--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-
+		
 	</head>
 	<body>
 
@@ -48,8 +48,28 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								
-								
+								<gallery>
+									<div><img src="images/catgallery/cat9.jpg" alt></div>
+									<div><img src="images/catgallery/cat14.jpg" alt></div>
+									<div><img src="images/catgallery/cat1.jpg" alt></div>
+									<div><img src="images/catgallery/cat2.jpg" alt></div>
+									<div><img src="images/catgallery/cat4.jpg" alt></div>
+									<div><img src="images/catgallery/cat15.jpg" alt></div>
+									<div><img src="images/catgallery/cat12.jpg" alt></div>
+									<div><img src="images/catgallery/cat21.jpg" alt></div>
+									<div><img src="images/catgallery/cat23.jpeg" alt></div>
+									<div><img src="images/catgallery/cat5.jpg" alt></div>
+									<div><img src="images/catgallery/cat10.jpg" alt></div>
+									<div><img src="images/catgallery/cat7.jpg" alt></div>
+									<div><img src="images/catgallery/cat6.jpg" alt></div>
+									<div><img src="images/catgallery/cat8.jpg" alt></div>
+									<div><img src="images/catgallery/cat11.jpg" alt></div>
+									<div><img src="images/catgallery/cat13.jpg" alt></div>
+									<div><img src="images/catgallery/cat16.jpg" alt></div>
+									<div><img src="images/catgallery/cat17.jpg" alt></div>
+									<div><img src="images/catgallery/cat18.jpg" alt></div>
+									<div><img src="images/catgallery/cat24.jpeg" alt></div>
+								</gallery>
 							</div>
 						</section>
 					</article>
