--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,13 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
+								<form id="form1">
+									<input type="text" name="name" placeholder="Name"><br>
+									<input type="email" name="email" placeholder="e-mail" required><br>
+									<textarea name="message" rows="10" cols="30" placeholder="What do you want to tell us."></textarea>
+									<button type="submit" form="form1" value="Submit" class="form-button">Submit</button><br>
+								</form>
+
 							</div>
 						</section>
 					</article>
